# Geni

./: .gitignore  README.md
apps/: CLAUDE.md
apps/geni-ios/geni-ios/: ContentView.swift  Item.swift  geni_iosApp.swift
apps/geni-ios/geni-ios.xcodeproj/: project.pbxproj
apps/geni-ios/geni-iosTests/: geni_iosTests.swift
apps/geni-ios/geni-iosUITests/: geni_iosUITests.swift  (+1 more)
apps/geni-site/: .gitignore  Dockerfile  drizzle.config.ts  eslint.config.js  package.json  pnpm-lock.yaml  vitest.config.ts
apps/geni-web/: drizzle.config.ts  package.json  pnpm-lock.yaml
apps/numa-android/: settings.gradle.kts
apps/numa-site/: package.json
services/auth-service/: .env.example  Cargo.toml  Dockerfile  ENV_SETUP.md
services/auth-service/src/: TODO.md  lib.rs  main.rs
services/auth-service/src/adapters/http/: app_state.rs  mod.rs  router.rs  security.rs
services/auth-service/src/adapters/http/controllers/: auth_controller.rs  mod.rs  oauth_controller.rs  passkeys_controller.rs
services/auth-service/src/application/: app_error.rs  mod.rs
services/auth-service/src/application/use_cases/: magic_link.rs  mod.rs  oauth.rs  passkeys.rs  sessions.rs  users.rs
services/auth-service/src/domain/: errors.rs  mod.rs  models.rs  ports.rs
services/auth-service/src/infra/: challenge_store.rs  config.rs  mod.rs  setup.rs  webauthn.rs
services/auth-service/src/infra/repositories/: mock.rs  mod.rs  models.rs  postgres_auth_repository.rs
services/auth-service/tests/: api_tests.rs
services/dna-processor/: Cargo.toml
services/dna-service/: Cargo.toml  README.md
(+127 files in other folders)
