[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"
default-run = "auth-service"

[dependencies]
# Web Framework
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["full"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utilities
dotenv = "0.15.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4.39", features = ["serde"] }

# Error Handling
thiserror = "2.0.10"

# Async Traits
async-trait = "0.1.84"

# Cryptography & Random
sha2 = "0.10.9"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.22.1"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0.100"
tower-http = { version = "0.6.7", features = ["full"] }
tower_governor = "0.8.0"
governor = "0.10.2"
tower = "0.5.2"
axum-extra = { version = "0.12.2", features = ["cookie", "typed-header"] }
webauthn-rs = { version = "0.5.3", features = ["danger-allow-state-serialisation"] }
oauth2 = "5.0.0"
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
url = "2.5.7"
dashmap = "6.1.0"

